# wisec23-speaker-bootstrapping

./: README.md
android_client/: README.md  installSystem.sh  settings.gradle
android_client/app/: build.gradle
android_client/app/src/main/: AndroidManifest.xml
android_client/gradle/wrapper/: gradle-wrapper.properties
android_client/org.quietmodem.Quiet/quiet/: build.gradle
linux_client_gui/: README.md  de.seemoo.speakerclient.json  jansson.json  libcorrect.json  libliquid.json  main.py  meson.build  python3-nacl.json  python3-numpy.json  python3-portaudio.json  python3-quiet.json  python3-requests.json  python3-sounddevice.json  python3-zeroconf.json  quiet.json
linux_client_gui/data/: de.seemoo.speakerclient.appdata.xml.in  de.seemoo.speakerclient.desktop.in  de.seemoo.speakerclient.gschema.xml  meson.build
linux_client_gui/data/icons/: meson.build
linux_client_gui/po/: POTFILES  meson.build
linux_client_gui/src/: __init__.py  acoustic.py  config.py  control.py  control.ui  database.py  ecdh.py  intro.ui  linux_client_gui.gresource.xml  linux_client_gui.in  listupdate.py  main.py  main.ui  meson.build  pairing.py  quiet.json  sock_cli.py  wifi_discovery.py  window.cmb  window.py  window.ui
server/: .gitignore  README.md  config.py  example_app.py  install.sh  lang.py  pairing.py  prepare_hq_voice.py  quiet_profiles.json  runner.sh  server_threaded.py
server/driver/: acoustic.py  announce.py  button.py  database.py  ecdh.py  pairing_thread.py  tts.py
server/driver/sock_server/: put_get.py  sock_ops.py
server/driver/wifi/: wifi_control.py
(+48 files in other folders)
